add body content

--- a/Portf.html
+++ b/Portf.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Landing page</title>
 </head>
-<body>
+<header>
     <nav>
         <a href="">Home</a>
         <a href="">Portfolio</a>
-        <a href="">Body</a>
+        <a href="">Contacts</a>
         <a href="">About</a>
     </nav>
+</header>
+<body>
+    <h1>WELCOME TO MY LANDING PAGE</h1>
+    <P>My name is Martin Misigo, am software developer.</P>
+    <p>Here is a list of the projects i have done so far</p>
+    <li>Creating a home page</li>
+    <li>creating a portfolio landing page</li>
+    <li>Designing other websites</li>
+    
 </body>
+<footer>at portfolio page</footer>
 </html>
