--- a/Portf.html
+++ b/Portf.html
@@ -8,10 +8,10 @@
 </head>
 <header>
     <nav>
-        <a href="">Home</a>
-        <a href="">Portfolio</a>
-        <a href="">Contacts</a>
-        <a href="">About</a>
+        <a href="index.html">Home</a>
+        <a href="index.html">Portfolio</a>
+        <a href="index.html">Contacts</a>
+        <a href="indexhtml">About</a>
     </nav>
 </header>
 <body>
@@ -21,6 +21,11 @@
     <li>Creating a home page</li>
     <li>creating a portfolio landing page</li>
     <li>Designing other websites</li>
+    <section>
+            <h1>ABOUT SECTION</h1>
+            <img src="" alt="">
+            <p></p>
+    </section>
     
 </body>
 <footer>at portfolio page</footer>
