add content in about section

--- a/Portf.html
+++ b/Portf.html
@@ -21,10 +21,14 @@
     <li>Creating a home page</li>
     <li>creating a portfolio landing page</li>
     <li>Designing other websites</li>
+
     <section>
             <h1>ABOUT SECTION</h1>
             <img src="" alt="">
-            <p></p>
+            <p>i studied in JKUAT and did a bachelor in BBIT<br>
+                I hsve been coding for two years i decided to<br>
+                take programming becuase its my passio
+            </p>
     </section>
     
 </body>
