add atyles to css files

--- a/Portf.html
+++ b/Portf.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Landing page</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <header>
     <nav>
@@ -29,6 +30,7 @@
                 I hsve been coding for two years i decided to<br>
                 take programming becuase its my passio
             </p>
+            <img src="" alt="">
     </section>
     
 </body>
