--- a/Portf.html
+++ b/Portf.html
@@ -15,24 +15,23 @@
         <a href="indexhtml">About</a>
     </nav>
 </header>
-<body>
+<body background = "back2.jpg">
     <h1>WELCOME TO MY LANDING PAGE</h1>
     <P>My name is Martin Misigo, am software developer.</P>
     <p>Here is a list of the projects i have done so far</p>
     <li>Creating a home page</li>
     <li>creating a portfolio landing page</li>
     <li>Designing other websites</li>
-
-    <section>
-            <h1>ABOUT SECTION</h1>
-            <img src="" alt="">
-            <p>i studied in JKUAT and did a bachelor in BBIT<br>
-                I hsve been coding for two years i decided to<br>
-                take programming becuase its my passio
-            </p>
-            <img src="" alt="">
-    </section>
     
 </body>
+<section>
+    <h1>ABOUT SECTION</h1>
+    <img src="" alt="">
+    <p>i studied in JKUAT and did a bachelor in BBIT<br>
+        I hsve been coding for two years i decided to<br>
+        take programming becuase its my passio
+    </p>
+    <img src="" alt="">
+</section>
 <footer>at portfolio page</footer>
 </html>
