--- a/Portf.html
+++ b/Portf.html
@@ -27,17 +27,22 @@
     <li>creating a portfolio landing page</li>
     <li>Designing other websites</li>
 
-    <section>
+    <section class="About">
         <h1>ABOUT SECTION</h1>
-        <img src="" alt="">
-        <p>i studied in JKUAT and did a bachelor in BBIT<br>
-            I hsve been coding for two years i decided to<br>
-            take programming becuase its my passio
+        <img class="first-img" src="about.jpg" alt="">
+        <p class= "par">i studied in JKUAT and did a bachelor in BBIT
+            I hsve been coding for two years i decided to
+            take programming becuase its my passion.
+            My experince in coding, i have two years experience in coding.
+
         </p>
-        <img src="back3.jpg" alt="">
+        <!-- <img class= "second-img" src="about.jpg" alt=""> -->
     </section>
     <section class="Contacts">
         <h1>CONTACTS</h1>
+        <li>NAME : MARTIN MISIGO</li>
+        <li>EMAIL : Misigomartin@gmail.com</li>
+        <li>NUMBER : 0715700355</li>
     </section>
     
 </body>
