add more styles

--- a/Portf.html
+++ b/Portf.html
@@ -34,6 +34,10 @@
             I hsve been coding for two years i decided to
             take programming becuase its my passion.
             My experince in coding, i have two years experience in coding.
+            I am currently learning full stack development.
+            the languages that am undertaking are <em>HTML,CSS Javascript;</em>
+            backend languages will include python and its libraries
+            such as flask and django.
 
         </p>
         <!-- <img class= "second-img" src="about.jpg" alt=""> -->
@@ -43,6 +47,19 @@
         <li>NAME : MARTIN MISIGO</li>
         <li>EMAIL : Misigomartin@gmail.com</li>
         <li>NUMBER : 0715700355</li>
+    </section>
+
+    <section>
+        <h1>FOR SUBSCRIPTIONS</h1>
+        <form>
+            <label for="fname">First name</label>
+            <input type="text" id="fname">
+            <label for="lname">Last name</label>
+            <input type="text" id="lname">
+            <label for="contact">Contact</label>
+            <input type="text" id="contact">
+            <input type="submit" value="Submit">
+        </form>
     </section>
     
 </body>
