add hobbies to about section

--- a/Portf.html
+++ b/Portf.html
@@ -23,9 +23,13 @@
     <h1 class="first">WELCOME TO MY LANDING PAGE</h1>
     <P>My name is Martin Misigo, am software developer.</P>
     <p>Here is a list of the projects i have done so far</p>
+    <div class = "portfolio">
     <li>Creating a home page</li>
     <li>creating a portfolio landing page</li>
     <li>Designing other websites</li>
+
+    </div>
+    
 
     <section class="About">
         <h1>ABOUT SECTION</h1>
@@ -38,6 +42,8 @@
             the languages that am undertaking are <em>HTML,CSS Javascript;</em>
             backend languages will include python and its libraries
             such as flask and django.
+            My hobbies include readin books, swimming, playing football
+            watching football and relaxing.
 
         </p>
         <!-- <img class= "second-img" src="about.jpg" alt=""> -->
