add links to projects

--- a/Portf.html
+++ b/Portf.html
@@ -24,9 +24,9 @@
     <P>My name is Martin Misigo, am software developer.</P>
     <p>Here is a list of the projects i have done so far</p>
     <div class = "portfolio">
-    <li>Creating a home page</li>
-    <li>creating a portfolio landing page</li>
-    <li>Designing other websites</li>
+    <li> <a href="https://github.com/Misigo94/my-hello-world.git"> Creating a home page</a></li>
+    <li> <a href="https://github.com/Misigo94/Portfolio-landing-page.git">creating a portfolio landing page</a></li>
+    <li> <a href="https://github.com/Misigo94/hello-world1.git">Designing other websites</a> </li>
 
     </div>
     
