add a form to file

--- a/Portf.html
+++ b/Portf.html
@@ -58,13 +58,13 @@
     <section>
         <h1>FOR SUBSCRIPTIONS</h1>
         <form>
-            <label for="fname">First name</label>
+            <label for="fname">First name</label><br>
             <input type="text" id="fname">
-            <label for="lname">Last name</label>
+            <label for="lname">Last name</label><br>
             <input type="text" id="lname">
-            <label for="contact">Contact</label>
-            <input type="text" id="contact">
-            <input type="submit" value="Submit">
+            <label for="contact">Contact</label><br>
+            <input type="text" id="contact"><br>
+            <input type="submit" value="Submit"><br>
         </form>
     </section>
     
