add a button ro file

--- a/Portf.html
+++ b/Portf.html
@@ -59,7 +59,8 @@
             <input type="text" id="lname"><br>
             <label for="contact">Contact</label><br>
             <input type="text" id="contact"><br><br>
-            <input type="submit" value="Submit"><br>
+            <!-- <input type="submit" value="Submit"><br> -->
+            <button>SUBMIT</button>
         </form>
     </section>  
 </body>
