add text to html file

--- a/Portf.html
+++ b/Portf.html
@@ -22,6 +22,8 @@
     <p>Here is a list of the projects i have done so far</p>
     <div class = "portfolio">
     <li> <a href="https://github.com/Misigo94/my-hello-world.git"> Creating a home page</a></li>
+    <p>So this project entails a simple code that dispalys the words hello word to a website;</p>
+
     <li> <a href="https://github.com/Misigo94/Portfolio-landing-page.git">creating a portfolio landing page</a></li>
     <li> <a href="https://github.com/Misigo94/hello-world1.git">Designing other websites</a> </li>
 
