add text to html file

--- a/Portf.html
+++ b/Portf.html
@@ -23,10 +23,10 @@
     <div class = "portfolio">
     <li> <a href="https://github.com/Misigo94/my-hello-world.git"> Creating a home page</a></li>
     <p>So this project entails a simple code that dispalys the words hello word to a website;</p>
-
     <li> <a href="https://github.com/Misigo94/Portfolio-landing-page.git">creating a portfolio landing page</a></li>
+    <p> This project entails a landing page consisting of portfolio and information of the software developer</p>
     <li> <a href="https://github.com/Misigo94/hello-world1.git">Designing other websites</a> </li>
-
+    <p>This project is entails other websites that the devloper has manged to work on</p>
     </div>
     
     <section class="About">
