add selling changes to file

--- a/Portf.html
+++ b/Portf.html
@@ -33,7 +33,7 @@
         <h1>ABOUT SECTION</h1>
         <img class="first-img" src="about.jpg" alt="">
         <p class= "par">i studied in JKUAT and did a bachelor in BBIT
-            I hsve been coding for two years i decided to
+            I have been coding for two years i decided to
             take programming becuase its my passion.
             My experince in coding, i have two years experience in coding.
             I am currently learning full stack development.
